// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configure custom should generate .prettierignore 1`] = `
[
  ".eslintcache",
  ".prettierrc",
  "coverage/",
  "eslint.config.js",
  "foo/bar/",
  "pnpm-lock.yaml",
  "report/",
  "tsconfig.json",
]
`;

exports[`configure default should generate .prettierignore 1`] = `
[
  ".eslintcache",
  ".prettierrc",
  "coverage/",
  "dist/",
  "eslint.config.js",
  "pnpm-lock.yaml",
  "report/",
  "tsconfig.json",
]
`;
